// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar TabBar badge demo works fine 1`] = `
<badge>
  <t-tab-bar
    defaultValue="label1"
    split="{{false}}"
    tClass="t-tab-bar"
  >
    <t-tab-bar-item
      ariaLabel="首页，有16条消息"
      badgeProps="{{
        Object {
          "count": 16,
        }
      }}"
      icon="home"
      value="label1"
    >
      首页
    </t-tab-bar-item>
    <t-tab-bar-item
      ariaLabel="软件，有新的消息"
      badgeProps="{{
        Object {
          "dot": true,
        }
      }}"
      icon="app"
      value="label2"
    >
      软件
    </t-tab-bar-item>
    <t-tab-bar-item
      ariaLabel="聊天，New"
      badgeProps="{{
        Object {
          "count": "New",
        }
      }}"
      icon="chat"
      value="label3"
    >
      聊天
    </t-tab-bar-item>
    <t-tab-bar-item
      ariaLabel="我的，有很多消息"
      badgeProps="{{
        Object {
          "count": "···",
        }
      }}"
      icon="user"
      value="label4"
    >
      我的
    </t-tab-bar-item>
  </t-tab-bar>
</badge>
`;

exports[`TabBar TabBar base demo works fine 1`] = `
<base>
  <t-tab-bar
    split="{{false}}"
    tClass="t-tab-bar"
    theme="tag"
    value="label_1"
    bind:change="onChange"
  >
    <t-tab-bar-item
      icon="home"
      value="label_1"
    >
      
    首页
  
    </t-tab-bar-item>
    <t-tab-bar-item
      icon="app"
      value="label_2"
    >
      
    应用
  
    </t-tab-bar-item>
    <t-tab-bar-item
      icon="chat"
      value="label_3"
    >
      
    聊天
  
    </t-tab-bar-item>
    <t-tab-bar-item
      icon="user"
      value="label_4"
    >
      
    我的
  
    </t-tab-bar-item>
  </t-tab-bar>
</base>
`;

exports[`TabBar TabBar custom demo works fine 1`] = `
<custom>
  <wx-view
    class="wrapper"
  >
    <t-tab-bar
      tClass="t-tab-bar"
      value="label_1"
      bind:change="onChange"
    >
      <t-tab-bar-item
        ariaLabel="首页"
        icon="home"
        value="label_1"
      />
      <t-tab-bar-item
        ariaLabel="软件"
        icon="app"
        value="label_2"
      />
      <t-tab-bar-item
        ariaLabel="聊天"
        icon="chat"
        value="label_3"
      />
      <t-tab-bar-item
        ariaLabel="我的"
        icon="user"
        value="label_4"
      />
    </t-tab-bar>
  </wx-view>
</custom>
`;

exports[`TabBar TabBar icon-only demo works fine 1`] = `
<icon-only>
  <t-tab-bar
    split="{{false}}"
    tClass="t-tab-bar"
    theme="tag"
    value="label_1"
    bind:change="onChange"
  >
    <t-tab-bar-item
      ariaLabel="首页"
      icon="home"
      value="label_1"
    />
    <t-tab-bar-item
      ariaLabel="软件"
      icon="app"
      value="label_2"
    />
    <t-tab-bar-item
      ariaLabel="聊天"
      icon="chat"
      value="label_3"
    />
    <t-tab-bar-item
      ariaLabel="我的"
      icon="user"
      value="label_4"
    />
  </t-tab-bar>
</icon-only>
`;

exports[`TabBar TabBar round demo works fine 1`] = `
<round>
  <t-tab-bar
    shape="round"
    split="{{false}}"
    tClass="t-tab-bar"
    theme="tag"
    value="label_1"
    bind:change="onChange"
  >
    <t-tab-bar-item
      ariaLabel="首页"
      icon="home"
      value="label_1"
    />
    <t-tab-bar-item
      ariaLabel="软件"
      icon="app"
      value="label_2"
    />
    <t-tab-bar-item
      ariaLabel="聊天"
      icon="chat"
      value="label_3"
    />
    <t-tab-bar-item
      ariaLabel="我的"
      icon="user"
      value="label_4"
    />
  </t-tab-bar>
</round>
`;

exports[`TabBar TabBar sub demo works fine 1`] = `
<sub>
  <t-tab-bar
    defaultValue="label_3"
    split="{{false}}"
    tClass="t-tab-bar"
    theme="tag"
  >
    <t-tab-bar-item
      subTabBar="{{Array []}}"
      value="home"
    >
      
    首页
  
    </t-tab-bar-item>
    <t-tab-bar-item
      subTabBar="{{Array []}}"
      value="app"
    >
      
    应用
  
    </t-tab-bar-item>
    <t-tab-bar-item
      subTabBar="{{
        Array [
          Object {
            "label": "基本信息",
            "value": "info",
          },
          Object {
            "label": "个人主页",
            "value": "home-page",
          },
          Object {
            "label": "设置",
            "value": "setting",
          },
        ]
      }}"
      value="user"
    >
      
    我的
  
    </t-tab-bar-item>
  </t-tab-bar>
</sub>
`;

exports[`TabBar TabBar text-only demo works fine 1`] = `
<text-only>
  <t-tab-bar
    split="{{false}}"
    tClass="t-tab-bar"
    theme="tag"
    value="home"
    bind:change="onChange"
  >
    <t-tab-bar-item
      value="home"
    >
       首页 
    </t-tab-bar-item>
    <t-tab-bar-item
      value="app"
    >
       应用 
    </t-tab-bar-item>
    <t-tab-bar-item
      value="chat"
    >
       聊天 
    </t-tab-bar-item>
    <t-tab-bar-item
      value="user"
    >
       我的 
    </t-tab-bar-item>
  </t-tab-bar>
</text-only>
`;
